--- a/code/1_preprocessing/perfume_preprocessing.ipynb
+++ b/code/1_preprocessing/perfume_preprocessing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "id": "2e1de18f",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "f49a0325",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "88622989",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "49483e0c",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "018b37ec",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 30,
    "id": "e3af5b28",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "ac7e83f7",
    "metadata": {},
    "outputs": [],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "id": "7c9c02a4",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "id": "540611ad",
    "metadata": {},
    "outputs": [],
@@ -206,12 +206,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "1057fe20",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_12228\\1798286842.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  filtered_df[col] = filtered_df[col].astype(str).str.lower().str.strip()\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_12228\\1798286842.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  filtered_df[col] = filtered_df[col].astype(str).str.lower().str.strip()\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_12228\\1798286842.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  filtered_df[col] = filtered_df[col].astype(str).str.lower().str.strip()\n"
+     ]
+    }
+   ],
    "source": [
-    "accord_cols = ['mainaccord1', 'mainaccord2', 'mainaccord3', 'mainaccord4', 'mainaccord5']\n",
+    "accord_cols = ['mainaccord1', 'mainaccord2', 'mainaccord3',]\n",
     "\n",
     "# 소문자로 변환 & 앞뒤 공백 제거\n",
     "for col in accord_cols:\n",
@@ -238,17 +263,9 @@
     "    condition_mask = filtered_df[accord_cols].isin(rare_accords).any(axis=1)\n",
     "    filtered_df = filtered_df[~condition_mask]\n",
     "\n",
-    "# #저장\n",
-    "# filtered_df.to_csv('C:/Users/Admin/Desktop/PROJ/data/02_cleaned/perfume/2.perfume_limited_mainaccord_filtered.csv', index=False)"
+    "# 저장\n",
+    "filtered_df.to_csv('C:/Users/Admin/Desktop/PROJ/data/02_cleaned/perfume/2.perfume_limited_mainaccord_filtered.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc053907",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
